# cinecli

./: .gitignore  README.md  pyproject.toml
cinecli/: __main__.py  config.py  history.py  models.py  preview.py  providers_extra.py  tmdb.py  torbox.py  torrentio.py  ui.py  vidsrc.py
