[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "cinecli"
version = "0.1.0"
description = "CineCLI: TMDB terminal browser with fzf/chafa previews, VidSrc and Torrentio play/download."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.5.0",
]

[project.optional-dependencies]
# Installs yt-dlp for VidSrc downloads (external tools like fzf/mpv/webtorrent still required)
download = [
  "yt-dlp>=2024.8.6",
]

[project.scripts]
# Both names provided; use `cine` for brevity
cine = "cinecli.__main__:main"
cinecli = "cinecli.__main__:main"

[tool.hatch.build]
# Keep repo extras out of distributions
exclude = [
  ".venv/**",
]

[tool.hatch.build.targets.wheel]
packages = ["cinecli"]
